--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -7,6 +7,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/home" routerLinkActive="current"><i class="material-icons">home</i> Home</a>
       <a mat-list-item routerLink="/favorites" routerLinkActive="current"><i class="material-icons">star</i> Favorites</a>
+      <a mat-list-item routerLink="/search" routerLinkActive="current"><i class="material-icons">search</i> Search</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -20,6 +21,21 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <a routerLink="/home" id="app-title">Weather</a>
+
+      <div class="spacer"></div>
+
+      <a mat-icon-button routerLink="/search">
+        <mat-icon>search</mat-icon>
+      </a>
+
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+
+      <mat-menu #menu="matMenu">
+        <a mat-menu-item routerLink="/settings"><mat-icon>settings</mat-icon> Settings</a>
+        <button mat-menu-item (click)="showAbout()"><mat-icon>info</mat-icon> About</button>
+      </mat-menu>
     </mat-toolbar>
     <main>
         <ng-content></ng-content>
